# secretmessage

./: .env  Cargo.toml  secret.db
src/: db.rs  main.rs
static/: secmesg.css
templates/: 404.html  501.html  index.html  messages.html
