[package]
name = "secretmessage"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web="4.0"
tera = "1.19"
serde = {"version" = "1.0", features = ["derive"]}
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros"] }
tokio = { version = "1", features = ["full"] }
chrono ="0.4"
actix-files = "0.6"
log = "0.4"
flexi_logger = "0.27"
dotenv = "0.15.0"
chrono-tz = "0.6"


